# agi-mvp-claude

./: .gitignore  ARCHITECTURE.md  README.md  benchmark_suite.py  energy.py  pyproject.toml  search.py  test_integration.py  utils.py
.github/workflows/: ci.yml
agi_composer/: __init__.py  composer.py  expression.py  primitives.py  search.py  utils.py
agi_composer/worlds/: __init__.py  explorer.py  grid_env.py  world_model.py
benchmarks/: benchmark_suite.py
examples/: phase2_demo.py  quickstart.py
tests/: test_energy.py  test_explorer.py  test_expression.py  test_grid_env.py  test_phase2_integration.py  test_primitives.py  test_search.py  test_world_model.py
